@@ -7,6 +7,7 @@ pre-2.0.2
       - fix pretty print mend not formatting mathml
       - fix Accessibility related crashes in QFontComboBox (Qt 6.5.2 patch fix)
       - prevent crashing is user mistakenly tries to delete entire ncx in CodeView
+      - harden delete unused styles to trailing whitespace in class names
 
 Sigil-2.0.1
     Bug Fixes
